--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -2,7 +2,14 @@
     background-color: rgb(16, 16, 16);
 }
 
+.navbar-brand {
+    font-size: 2.5rem;
+    margin-left: 1rem;
+    font-weight: bolder;
+}
+
 .nav-link {
     font-size: 1.25rem;
-    color: var(--grey-text);
+    font-weight: bold;
+    color: grey;
 }
