Fixed positioning of the footer

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,9 +1,8 @@
 .bg-darker-tp {
     background-color: rgba(16, 16, 16, 0.9);
-}
+};
 
 .soc-med-icon {
-    text-decoration: none;
     padding-right: 1rem;
     padding-left: 1rem;
-}
+};
