--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -3,13 +3,13 @@
 }
 
 .navbar-brand {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
     margin-left: 1rem;
     font-weight: bolder;
 }
 
 .nav-link {
-    font-size: 1.25rem;
-    font-weight: bold;
+    font-size: 1.25rem !important;
+    font-weight: bold !important;
     color: grey;
 }
