Changed nav links, added nav button, changed About Me page

--- a/src/styles/PortfolioContainer.css
+++ b/src/styles/PortfolioContainer.css
@@ -1,3 +1,11 @@
+body {
+  background-image: url('../images/test6.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 .btn {
     width: 65%;
 }
@@ -16,6 +24,7 @@
 
 h1 {
     font-weight: bolder;
+    color: whitesmoke;
 }
 
 .portfolio-body {
@@ -26,12 +35,28 @@ h1 {
 
 .profile-pic {
     border-style: solid;
-    border-color: dark;
-    border-radius: 5px;
+    border-width: 2px;
+    border-color: rgb(255, 255, 255);
+    border-radius: 50%;
     max-height: 250px;
+    width: auto;
+    height: auto;
     margin-bottom: 1rem;
+    animation: shadow 5s infinite;
 }
 
 .project-container {
     padding: 1rem;
+}
+
+.text-box {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  background-color: rgba(16, 16, 16, 0.9);
+}
+
+@keyframes shadow {
+  50% {box-shadow: 0px 0px 20px #ffea00;}
 }
