--- a/src/styles/PortfolioContainer.css
+++ b/src/styles/PortfolioContainer.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../images/test6.jpg');
+  background-image: url('../images/other/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -7,46 +7,46 @@ body {
 }
 
 .btn {
-    width: 65%;
+  width: 65%;
 }
 
 .btn-top {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .bg-darker {
-    background-color: rgb(16, 16, 16);
+  background-color: rgb(16, 16, 16);
 }
 
 .card {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 h1 {
-    font-weight: bolder;
-    color: whitesmoke;
+  font-weight: bolder;
+  color: whitesmoke;
 }
 
 .portfolio-body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile-pic {
-    border-style: solid;
-    border-width: 2px;
-    border-color: rgb(255, 255, 255);
-    border-radius: 50%;
-    max-height: 250px;
-    width: auto;
-    height: auto;
-    margin-bottom: 1rem;
-    animation: shadow 5s infinite;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  max-height: 250px;
+  width: auto;
+  height: auto;
+  margin-bottom: 1rem;
+  animation: shadow 5s infinite;
 }
 
 .project-container {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .text-box {
